--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rust-hadoop"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 tonic = "0.12"
@@ -13,6 +13,10 @@ uuid = { version = "1.0", features = ["v4"] }
 clap = { version = "4.0", features = ["derive"] }
 futures = "0.3"
 bytes = "1.0"
+fs2 = "0.4.3"
+reqwest = { version = "0.12.24", features = ["json"] }
+warp = { version = "0.4.2", features = ["server"] }
+rand = "0.9.2"
 
 [build-dependencies]
 tonic-build = "0.12"
