--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ fs2 = "0.4"
 reqwest = { version = "0.12", features = ["json"] }
 warp = { version = "0.4", features = ["server"] }
 rand = "0.9"
+rocksdb = "0.24"
 
 [build-dependencies]
 tonic-build = "0.12"
