--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ bytes = "1.0"
 fs2 = "0.4"
 reqwest = { version = "0.12", features = ["json"] }
 warp = { version = "0.4", features = ["server"] }
+axum = "0.7"
+tower = "0.5"
+tower-http = { version = "0.6", features = ["trace"] }
 rand = "0.9"
 rocksdb = "0.24"
 crc32fast = "1.5.0"
