--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   master1:
     build: .
     container_name: dfs-master1
-    command: /app/master --addr 0.0.0.0:50051 --id 1 --peers http://dfs-master2:8080,http://dfs-master3:8080 --http-port 8080 --storage-dir /data/raft --advertise-addr dfs-master1:50051
+    command: /app/master --addr 0.0.0.0:50051 --id 1 --peers http://dfs-master2:8080,http://dfs-master3:8080 --http-port 8080 --storage-dir /data/raft --advertise-addr http://dfs-master1:50051
     ports:
       - "50051:50051"
       - "8081:8080"
@@ -21,7 +21,7 @@ services:
   master2:
     build: .
     container_name: dfs-master2
-    command: /app/master --addr 0.0.0.0:50051 --id 2 --peers http://dfs-master1:8080,http://dfs-master3:8080 --http-port 8080 --storage-dir /data/raft --advertise-addr dfs-master2:50051
+    command: /app/master --addr 0.0.0.0:50051 --id 2 --peers http://dfs-master1:8080,http://dfs-master3:8080 --http-port 8080 --storage-dir /data/raft --advertise-addr http://dfs-master2:50051
     ports:
       - "50057:50051"
       - "8082:8080"
@@ -38,7 +38,7 @@ services:
   master3:
     build: .
     container_name: dfs-master3
-    command: /app/master --addr 0.0.0.0:50051 --id 3 --peers http://dfs-master1:8080,http://dfs-master2:8080 --http-port 8080 --storage-dir /data/raft --advertise-addr dfs-master3:50051
+    command: /app/master --addr 0.0.0.0:50051 --id 3 --peers http://dfs-master1:8080,http://dfs-master2:8080 --http-port 8080 --storage-dir /data/raft --advertise-addr http://dfs-master3:50051
     ports:
       - "50058:50051"
       - "8083:8080"
