feat: Enforce shard ownership for file creation, add CLI error exit on rename failure, and refine Raft peer configuration and test script.

--- a/docker-compose-sharded.yml
+++ b/docker-compose-sharded.yml
@@ -7,7 +7,7 @@ services:
   master1-shard1:
     build: .
     container_name: dfs-master1-shard1
-    command: /app/master --addr 0.0.0.0:50051 --id 1 --peers http://dfs-master1-shard1:8080 --http-port 8080 --storage-dir /data/raft --advertise-addr http://dfs-master1-shard1:50051 --shard-id shard-1 --shard-config /app/shard_config.json
+    command: /app/master --addr 0.0.0.0:50051 --id 1 --peers "" --http-port 8080 --storage-dir /data/raft --advertise-addr http://dfs-master1-shard1:50051 --shard-id shard-1 --shard-config /app/shard_config.json
     ports:
       - "50051:50051"
       - "8081:8080"
@@ -41,7 +41,7 @@ services:
   master1-shard2:
     build: .
     container_name: dfs-master1-shard2
-    command: /app/master --addr 0.0.0.0:50051 --id 1 --peers http://dfs-master1-shard2:8080 --http-port 8080 --storage-dir /data/raft --advertise-addr http://dfs-master1-shard2:50051 --shard-id shard-2 --shard-config /app/shard_config.json
+    command: /app/master --addr 0.0.0.0:50051 --id 1 --peers "" --http-port 8080 --storage-dir /data/raft --advertise-addr http://dfs-master1-shard2:50051 --shard-id shard-2 --shard-config /app/shard_config.json
     ports:
       - "50061:50051"
       - "8091:8080"
