Refactor DFS project structure and add sharding functionality
- Updated Cargo.toml files for chunkserver, client, and metaserver to define library names and paths.
- Introduced build.rs files in chunkserver, client, and metaserver for proto compilation with tonic-prost.
- Refactored chunkserver and client binaries to use new module paths.
- Created a new sharding module in the client with a ShardMap implementation for consistent hashing.
- Added tests for ShardMap functionality to ensure correct shard distribution and rebalancing behavior.
- Updated metaserver to include new modules and refactor existing code to use the new library structure.
- Integrated openraft for Raft consensus protocol in metaserver.

--- a/dfs/chunkserver/Cargo.toml
+++ b/dfs/chunkserver/Cargo.toml
@@ -3,6 +3,10 @@ name = "dfs-chunkserver"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "dfs_chunkserver"
+path = "src/lib.rs"
+
 [[bin]]
 name = "chunkserver"
 path = "src/bin/chunkserver.rs"
