Refactor project structure (#18)
* Add comprehensive test scripts for sharded cluster functionality

- Implement chaos testing with `chaos_test_sharded.sh` to validate system resilience under failure conditions.
- Create `cluster_membership_test.sh` to verify cluster information retrieval and membership command handling.
- Develop `cross_shard_test.sh` for testing file renaming across different shards using the Transaction Record pattern.
- Introduce `fault_recovery_test.sh` to ensure system recovery from shard crashes during cross-shard transactions.
- Add `rename_test.sh` to validate same-shard and cross-shard rename operations.
- Implement `same_shard_rename_test.sh` for testing renaming within the same shard.
- Create `simple_chaos_test.sh` to perform basic chaos testing by stopping one server at a time.
- Add `transaction_abort_test.sh` to verify transaction abort behavior when the destination shard is unavailable.

* refactor project structure

* Refactor DFS project structure and add sharding functionality

- Updated Cargo.toml files for chunkserver, client, and metaserver to define library names and paths.
- Introduced build.rs files in chunkserver, client, and metaserver for proto compilation with tonic-prost.
- Refactored chunkserver and client binaries to use new module paths.
- Created a new sharding module in the client with a ShardMap implementation for consistent hashing.
- Added tests for ShardMap functionality to ensure correct shard distribution and rebalancing behavior.
- Updated metaserver to include new modules and refactor existing code to use the new library structure.
- Integrated openraft for Raft consensus protocol in metaserver.

* refactor: clean up dependencies in Cargo.toml files

* refactor: remove unused build script and add test execution script

* Add comprehensive test scripts for sharded cluster functionality

- Implement chaos testing with `chaos_test_sharded.sh` to validate system resilience under failure conditions.
- Create `c

--- a/shard_config.json
+++ b/shard_config.json
@@ -1,10 +1,1 @@
-{
-  "shards": {
-    "shard-1": [
-      "http://dfs-master1-shard1:50051"
-    ],
-    "shard-2": [
-      "http://dfs-master1-shard2:50051"
-    ]
-  }
-}
+{"shards": {"shard-1": ["http://dfs-master1-shard1:50051"], "shard-2": ["http://dfs-master1-shard2:50051"]}}
