--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["dfs/metaserver", "dfs/chunkserver", "dfs/client"]
+members = ["dfs/metaserver", "dfs/chunkserver", "dfs/client", "dfs/s3_server"]
