--- a/dfs/s3_server/Cargo.toml
+++ b/dfs/s3_server/Cargo.toml
@@ -9,6 +9,7 @@ tokio = { version = "1.0", features = ["full"] }
 tower = "0.5"
 tower-http = { version = "0.6", features = ["trace", "cors", "normalize-path"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 quick-xml = { version = "0.38", features = ["serialize"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
