feat: Add S3 integration tests, implement `list_all_files` client method, and enhance S3 server for object listing and shard configuration.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,9 @@ services:
     command: /app/s3-server
     environment:
       - MASTER_ADDR=http://dfs-master1-shard1:50051
+      - SHARD_CONFIG=/app/shard_config.json
+    volumes:
+      - ./shard_config.json:/app/shard_config.json
     ports:
       - "9000:9000"
     networks:
