--- a/dfs/chunkserver/Cargo.toml
+++ b/dfs/chunkserver/Cargo.toml
@@ -20,10 +20,14 @@ serde_json = "1.0"
 clap = { version = "4.0", features = ["derive"] }
 bytes = "1.0"
 fs2 = "0.4"
-axum = "0.8"
-tower = "0.5"
+
 crc32fast = "1.5"
 tonic-prost = "0.14"
+uuid = { version = "1.11", features = ["v4"] }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+anyhow = "1.0"
+dfs-common = { path = "../common" }
 
 [build-dependencies]
 tonic-prost-build = "0.14"
