Fix cross-shard test: sync ShardMap, enforce range strategy and deterministic sorting
- Master: Initialize ShardMap with Range strategy when config servers are used.
- Master: Add background task to periodically refresh ShardMap from Config Server.
- Master/Client: Sort shards by ID during ShardMap reconstruction to ensure deterministic range boundaries.
- Sharding: Change default split key from 'm' to '/m' to correctly partition file paths.
- Master: Fix clippy warnings for unused fields.

--- a/dfs/chunkserver/Cargo.toml
+++ b/dfs/chunkserver/Cargo.toml
@@ -28,6 +28,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 anyhow = "1.0"
 dfs-common = { path = "../common" }
+dfs-client = { path = "../client" }
 
 [build-dependencies]
 tonic-prost-build = "0.14"
