Refactor sharding logic and update dependencies
- Moved ShardMap and related sharding logic from dfs_client to dfs_common for better modularity.
- Updated MyChunkServer to load shard configuration from an environment variable.
- Removed the old sharding module from dfs_client.
- Updated references to ShardMap across various modules to use the new common location.
- Added serde_json and crc32fast dependencies to Cargo.toml in dfs/common.
- Updated Docker configurations to support shard configuration loading.
- Enhanced logging for better debugging during shard operations.

--- a/test_scripts/spark-s3-test/docker-compose.yml
+++ b/test_scripts/spark-s3-test/docker-compose.yml
@@ -43,9 +43,12 @@ services:
     build:
       context: ../..
       dockerfile: Dockerfile
-    command: [ "/app/chunkserver", "--addr", "0.0.0.0:50052", "--master-addr", "dfs-master1-shard1:50051", "--storage-dir", "/data/chunks", "--advertise-addr", "dfs-chunkserver1-shard1:50052" ]
+    command: [ "/app/chunkserver", "--addr", "0.0.0.0:50052", "--config-servers", "http://dfs-master1-shard1:50051", "--storage-dir", "/data/chunks", "--advertise-addr", "dfs-chunkserver1-shard1:50052" ]
     volumes:
       - cs1-shard1-data:/data/chunks
+      - ../../shard_config.json:/app/shard_config.json:ro
+    environment:
+      - SHARD_CONFIG=/app/shard_config.json
     depends_on:
       - master1-shard1
     networks:
@@ -58,9 +61,12 @@ services:
     build:
       context: ../..
       dockerfile: Dockerfile
-    command: [ "/app/chunkserver", "--addr", "0.0.0.0:50052", "--master-addr", "dfs-master1-shard2:50051", "--storage-dir", "/data/chunks", "--advertise-addr", "dfs-chunkserver1-shard2:50052" ]
+    command: [ "/app/chunkserver", "--addr", "0.0.0.0:50052", "--config-servers", "http://dfs-master1-shard2:50051", "--storage-dir", "/data/chunks", "--advertise-addr", "dfs-chunkserver1-shard2:50052" ]
     volumes:
       - cs1-shard2-data:/data/chunks
+      - ../../shard_config.json:/app/shard_config.json:ro
+    environment:
+      - SHARD_CONFIG=/app/shard_config.json
     depends_on:
       - master1-shard2
     networks:
@@ -77,6 +83,7 @@ services:
     environment:
       - MASTER_ADDR=http://dfs-master1-shard1:50051
       - SHARD_CONFIG=/app/shard_config.json
+      - RUST_LOG=dfs_client=debug,s3_server=debug,tower_http=debug
     volumes:
       - ../../shard_config.json:/app/shard_config.json:ro
     ports:
