--- a/dfs/common/Cargo.toml
+++ b/dfs/common/Cargo.toml
@@ -8,3 +8,5 @@ tonic = "0.14"
 uuid = { version = "1.11", features = ["v4"] }
 tracing = "0.1"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+crc32fast = "1.3"
