--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,38 @@
 version: '3.8'
 
 services:
+  config-server:
+    build: .
+    container_name: dfs-config-server
+    command: /app/config_server --addr 0.0.0.0:50050 --id 1 --peers "" --http-port 8080 --storage-dir /data/config-raft --advertise-addr http://config-server:50050
+    environment:
+      - RUST_LOG=info,dfs_metaserver::simple_raft=warn
+    ports:
+      - "50050:50050"
+      - "8080:8080"
+    networks:
+      - dfs-sharded-network
+    volumes:
+      - config-server-data:/data/config-raft
+
   # ==========================================
   # Shard 1
   # ==========================================
   master1-shard1:
     build: .
     container_name: dfs-master1-shard1
-    command: /app/master --addr 0.0.0.0:50051 --id 1 --peers "" --http-port 8080 --storage-dir /data/raft --advertise-addr http://dfs-master1-shard1:50051 --shard-id shard-1 --shard-config /app/shard_config.json
+    command: /app/master --addr 0.0.0.0:50051 --id 1 --peers "" --http-port 8080 --storage-dir /data/raft --advertise-addr http://dfs-master1-shard1:50051 --shard-id shard-1 --config-servers http://config-server:50050 --merge-threshold-rps=-1.0
+    environment:
+      - RUST_LOG=info,dfs_metaserver::simple_raft=warn
     ports:
       - "50051:50051"
       - "8081:8080"
     networks:
       - dfs-sharded-network
+    depends_on:
+      - config-server
     volumes:
       - master1-shard1-data:/data/raft
-      - ./shard_config.json:/app/shard_config.json
     healthcheck:
       test: [ "CMD", "sh", "-c", "netstat -an | grep 50051 || exit 1" ]
       interval: 5s
@@ -25,15 +42,19 @@ services:
   chunkserver1-shard1:
     build: .
     container_name: dfs-chunkserver1-shard1
-    command: /app/chunkserver --addr 0.0.0.0:50052 --master-addr dfs-master1-shard1:50051 --storage-dir /data/cs1 --advertise-addr dfs-chunkserver1-shard1:50052
+    command: /app/chunkserver --addr 0.0.0.0:50052 --config-servers http://config-server:50050 --storage-dir /data/cs1 --advertise-addr dfs-chunkserver1-shard1:50052
     ports:
       - "50052:50052"
     networks:
       - dfs-sharded-network
     depends_on:
       - master1-shard1
+      - config-server
+    environment:
+      - SHARD_CONFIG=/app/shard_config.json
     volumes:
       - cs1-shard1-data:/data/cs1
+      - ./shard_config.json:/app/shard_config.json:ro
 
   # ==========================================
   # Shard 2
@@ -41,15 +62,18 @@ services:
   master1-shard2:
     build: .
     container_name: dfs-master1-shard2
-    command: /app/master --addr 0.0.0.0:50051 --id 1 --peers "" --http-port 8080 --storage-dir /data/raft --advertise-addr http://dfs-master1-shard2:50051 --shard-id shard-2 --shard-config /app/shard_config.json
+    command: /app/master --addr 0.0.0.0:50051 --id 1 --peers "" --http-port 8080 --storage-dir /data/raft --advertise-addr http://dfs-master1-shard2:50051 --shard-id shard-2 --config-servers http://config-server:50050 --merge-threshold-rps=-1.0
+    environment:
+      - RUST_LOG=info,dfs_metaserver::simple_raft=warn
     ports:
       - "50061:50051"
       - "8091:8080"
     networks:
       - dfs-sharded-network
+    depends_on:
+      - config-server
     volumes:
       - master1-shard2-data:/data/raft
-      - ./shard_config.json:/app/shard_config.json
     healthcheck:
       test: [ "CMD", "sh", "-c", "netstat -an | grep 50051 || exit 1" ]
       interval: 5s
@@ -59,15 +83,51 @@ services:
   chunkserver1-shard2:
     build: .
     container_name: dfs-chunkserver1-shard2
-    command: /app/chunkserver --addr 0.0.0.0:50052 --master-addr dfs-master1-shard2:50051 --storage-dir /data/cs1 --advertise-addr dfs-chunkserver1-shard2:50052
+    command: /app/chunkserver --addr 0.0.0.0:50052 --config-servers http://config-server:50050 --storage-dir /data/cs1 --advertise-addr dfs-chunkserver1-shard2:50052
     ports:
       - "50062:50052"
     networks:
       - dfs-sharded-network
     depends_on:
       - master1-shard2
+      - config-server
+    environment:
+      - SHARD_CONFIG=/app/shard_config.json
     volumes:
       - cs1-shard2-data:/data/cs1
+      - ./shard_config.json:/app/shard_config.json:ro
+
+  chunkserver-extra:
+    build: .
+    container_name: dfs-chunkserver-extra
+    command: /app/chunkserver --addr 0.0.0.0:50052 --config-servers http://config-server:50050 --storage-dir /data/cs-extra --advertise-addr dfs-chunkserver-extra:50052
+    ports:
+      - "50072:50052"
+    networks:
+      - dfs-sharded-network
+    depends_on:
+      - config-server
+    environment:
+      - SHARD_CONFIG=/app/shard_config.json
+    volumes:
+      - cs-extra-data:/data/cs-extra
+      - ./shard_config.json:/app/shard_config.json:ro
+
+  chunkserver-extra2:
+    build: .
+    container_name: dfs-chunkserver-extra2
+    command: /app/chunkserver --addr 0.0.0.0:50052 --config-servers http://config-server:50050 --storage-dir /data/cs-extra2 --advertise-addr dfs-chunkserver-extra2:50052
+    ports:
+      - "50082:50052"
+    networks:
+      - dfs-sharded-network
+    depends_on:
+      - config-server
+    environment:
+      - SHARD_CONFIG=/app/shard_config.json
+    volumes:
+      - cs-extra2-data:/data/cs-extra2
+      - ./shard_config.json:/app/shard_config.json:ro
 
   s3-server:
     build: .
@@ -75,22 +135,27 @@ services:
     command: /app/s3-server
     environment:
       - MASTER_ADDR=http://dfs-master1-shard1:50051
+      - CONFIG_SERVERS=http://config-server:50050
       - SHARD_CONFIG=/app/shard_config.json
     volumes:
-      - ./shard_config.json:/app/shard_config.json
+      - ./shard_config.json:/app/shard_config.json:ro
     ports:
       - "9000:9000"
     networks:
       - dfs-sharded-network
     depends_on:
       - master1-shard1
+      - config-server
 
 networks:
   dfs-sharded-network:
     driver: bridge
 
 volumes:
+  config-server-data:
   master1-shard1-data:
   cs1-shard1-data:
   master1-shard2-data:
   cs1-shard2-data:
+  cs-extra-data:
+  cs-extra2-data:
