--- a/dfs/metaserver/Cargo.toml
+++ b/dfs/metaserver/Cargo.toml
@@ -30,7 +30,7 @@ reqwest = { version = "0.13", features = ["json"] }
 axum = "0.8"
 
 tower-http = { version = "0.6", features = ["trace"] }
-rand = "0.9"
+rand = "0.8"
 rocksdb = "0.24"
 tonic-prost = "0.14"
 tracing = "0.1"
@@ -46,3 +46,4 @@ tonic-prost-build = "0.14"
 
 [dev-dependencies]
 tempfile = "3.23"
+proptest = "1.6"
