--- a/dfs/client/Cargo.toml
+++ b/dfs/client/Cargo.toml
@@ -25,6 +25,7 @@ uuid = { version = "1.11", features = ["v4"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 anyhow = "1.0"
+rand = "0.8"
 dfs-common = { path = "../common" }
 
 [build-dependencies]
